Fix Container Collapse height.

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -55,7 +55,7 @@
 
     &.active {
       transition: max-height 2s ease;
-      max-height: 200px;
+      max-height: 1000px;
     }
 
     .content_collapse {
